--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="banner">
       <div class="banner_inner">
         <figure>
-          <img src="./img/Image1.jpg" alt="" />
+          <img src="img/Image1.jpg" alt="" />
         </figure>
       </div>
     </section>
